PT2/Analist/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON

Grammar

Rule 0     S' -> INITIAL
Rule 1     INITIAL -> L_INST
Rule 2     L_INST -> L_INST INTS
Rule 3     L_INST -> INTS
Rule 4     L_INST -> empty
Rule 5     INTS -> METHODS
Rule 6     INTS -> FUNTIONS
Rule 7     INTS -> SENTENCES
Rule 8     METHODS -> METHODS METHOD
Rule 9     METHODS -> METHOD
Rule 10    METHOD -> METHOD_VOID ID LPAREN RPAREN LKEY empty RKEY
Rule 11    METHOD -> METHOD_VOID ID LPAREN RPAREN LKEY SENTENCES_METHOD RKEY
Rule 12    METHOD -> METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY empty RKEY
Rule 13    METHOD -> METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY SENTENCES_METHOD RKEY
Rule 14    FUNTIONS -> FUNTIONS FUNTION
Rule 15    FUNTIONS -> FUNTION
Rule 16    FUNTION -> TYPE_INT COUPLER
Rule 17    FUNTION -> TYPE_DOUBLE COUPLER
Rule 18    FUNTION -> TYPE_STRING COUPLER
Rule 19    FUNTION -> TYPE_CHAR COUPLER
Rule 20    FUNTION -> TYPE_BOOL COUPLER
Rule 21    COUPLER -> ID LPAREN RPAREN LKEY empty RKEY
Rule 22    COUPLER -> ID LPAREN RPAREN LKEY SENTENCES_FUNTION RKEY
Rule 23    COUPLER -> ID LPAREN L_PARAMS RPAREN LKEY empty RKEY
Rule 24    COUPLER -> ID LPAREN L_PARAMS RPAREN LKEY SENTENCES_FUNTION RKEY
Rule 25    SENTENCES_METHOD -> SENTENCES_METHOD SENTENCE_METHOD
Rule 26    SENTENCES_METHOD -> SENTENCE_METHOD
Rule 27    SENTENCE_METHOD -> DECLARATIONS
Rule 28    SENTENCE_METHOD -> ASSIGNMENTS
Rule 29    SENTENCE_METHOD -> SENTENCES_IF
Rule 30    SENTENCE_METHOD -> SENTENCES_WHILE
Rule 31    SENTENCE_METHOD -> COMENTLINE
Rule 32    SENTENCE_METHOD -> COMENTMULTYLINE
Rule 33    SENTENCE_METHOD -> BREAK DOT_AN_DCOMMA
Rule 34    SENTENCE_METHOD -> CONTINUE DOT_AN_DCOMMA
Rule 35    SENTENCE_METHOD -> METHOD_RETURN DOT_AN_DCOMMA
Rule 36    SENTENCE_METHOD -> ID LPAREN CALLS RPAREN
Rule 37    SENTENCES_FUNTION -> SENTENCES_FUNTION SENTENCE_FUNTION
Rule 38    SENTENCES_FUNTION -> SENTENCE_FUNTION
Rule 39    SENTENCE_FUNTION -> DECLARATIONS
Rule 40    SENTENCE_FUNTION -> ASSIGNMENTS
Rule 41    SENTENCE_FUNTION -> SENTENCES_IF
Rule 42    SENTENCE_FUNTION -> SENTENCES_WHILE
Rule 43    SENTENCE_FUNTION -> COMENTLINE
Rule 44    SENTENCE_FUNTION -> COMENTMULTYLINE
Rule 45    SENTENCE_FUNTION -> BREAK DOT_AN_DCOMMA
Rule 46    SENTENCE_FUNTION -> CONTINUE DOT_AN_DCOMMA
Rule 47    SENTENCE_FUNTION -> METHOD_RETURN TYPE_DATO DOT_AN_DCOMMA
Rule 48    SENTENCE_FUNTION -> METHOD_RETURN ID DOT_AN_DCOMMA
Rule 49    SENTENCE_FUNTION -> ID LPAREN CALLS RPAREN
Rule 50    SENTENCES -> SENTENCES SENTENCE
Rule 51    SENTENCES -> SENTENCE
Rule 52    SENTENCE -> DECLARATIONS
Rule 53    SENTENCE -> ASSIGNMENTS
Rule 54    SENTENCE -> SENTENCE_IF
Rule 55    SENTENCE -> SENTENCE_WHILE
Rule 56    SENTENCE -> COMENTLINE
Rule 57    SENTENCE -> COMENTMULTYLINE
Rule 58    SENTENCE -> BREAK DOT_AN_DCOMMA
Rule 59    SENTENCE -> CONTINUE DOT_AN_DCOMMA
Rule 60    SENTENCE -> ID LPAREN CALLS RPAREN
Rule 61    SENTENCES_IF -> SENTENCES_IF SENTENCE_IF
Rule 62    SENTENCES_IF -> SENTENCE_IF
Rule 63    SENTENCE_IF -> CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY
Rule 64    SENTENCE_IF -> CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY CONDITIONAL_ELSE LKEY SENTENCES RKEY
Rule 65    SENTENCE_IF -> CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY
Rule 66    SENTENCE_IF -> CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY CONDITIONAL_ELSE LKEY SENTENCES_FUNTION RKEY
Rule 67    SENTENCE_IF -> CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY
Rule 68    SENTENCE_IF -> CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY CONDITIONAL_ELSE LKEY SENTENCES_METHOD RKEY
Rule 69    SENTENCES_WHILE -> SENTENCES_WHILE SENTENCE_WHILE
Rule 70    SENTENCES_WHILE -> SENTENCE_WHILE
Rule 71    SENTENCE_WHILE -> ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY
Rule 72    SENTENCE_WHILE -> ITERATIVE_DO LKEY SENTENCES RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
Rule 73    SENTENCE_WHILE -> ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY
Rule 74    SENTENCE_WHILE -> ITERATIVE_DO LKEY SENTENCES_FUNTION RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
Rule 75    SENTENCE_WHILE -> ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY
Rule 76    SENTENCE_WHILE -> ITERATIVE_DO LKEY SENTENCES_METHOD RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
Rule 77    INSTRUCTIONS -> INSTRUCTIONS OPTIONS
Rule 78    INSTRUCTIONS -> OPTIONS
Rule 79    OPTIONS -> OPTIONS AND OPTIONS
Rule 80    OPTIONS -> OPTIONS OR OPTIONS
Rule 81    OPTIONS -> OPTIONS NOT OPTIONS
Rule 82    OPTIONS -> OPTION
Rule 83    OPTION -> OPTION IQUALS OPTION
Rule 84    OPTION -> OPTION DIFFERENT OPTION
Rule 85    OPTION -> OPTION IQUAL_GREATER OPTION
Rule 86    OPTION -> OPTION IQUAL_LESS OPTION
Rule 87    OPTION -> OPTION GREATER OPTION
Rule 88    OPTION -> OPTION LESS OPTION
Rule 89    OPTION -> ID
Rule 90    OPTION -> EXPRESSIONS
Rule 91    DECLARATIONS -> DECLARATIONS DECLARATION
Rule 92    DECLARATIONS -> DECLARATION
Rule 93    DECLARATION -> TYPE_INT ID IQUAL INT DOT_AN_DCOMMA
Rule 94    DECLARATION -> TYPE_DOUBLE ID IQUAL FLOAT DOT_AN_DCOMMA
Rule 95    DECLARATION -> TYPE_STRING ID IQUAL STRING DOT_AN_DCOMMA
Rule 96    DECLARATION -> TYPE_CHAR ID IQUAL CHAR DOT_AN_DCOMMA
Rule 97    DECLARATION -> TYPE_BOOL ID IQUAL DATA_BOOL DOT_AN_DCOMMA
Rule 98    ASSIGNMENTS -> ASSIGNMENTS ASSIGNMENT
Rule 99    ASSIGNMENTS -> ASSIGNMENT
Rule 100   ASSIGNMENT -> ID IQUAL INT DOT_AN_DCOMMA
Rule 101   ASSIGNMENT -> ID IQUAL FLOAT DOT_AN_DCOMMA
Rule 102   ASSIGNMENT -> ID IQUAL STRING DOT_AN_DCOMMA
Rule 103   ASSIGNMENT -> ID IQUAL CHAR DOT_AN_DCOMMA
Rule 104   ASSIGNMENT -> ID IQUAL DATA_BOOL DOT_AN_DCOMMA
Rule 105   ASSIGNMENT -> ID IQUAL EXPRESSIONS DOT_AN_DCOMMA
Rule 106   L_PARAMS -> L_PARAMS COMMA PARAM
Rule 107   L_PARAMS -> PARAM
Rule 108   PARAM -> TYPE_INT ID
Rule 109   PARAM -> TYPE_DOUBLE ID
Rule 110   PARAM -> TYPE_STRING ID
Rule 111   PARAM -> TYPE_CHAR ID
Rule 112   PARAM -> TYPE_BOOL ID
Rule 113   CALLS -> CALLS COMMA CALL
Rule 114   CALLS -> CALL
Rule 115   CALL -> TYPE_DATO
Rule 116   CALL -> ID
Rule 117   EXPRESSIONS -> EXPRESSIONS E
Rule 118   EXPRESSIONS -> E
Rule 119   E -> E PLUS E
Rule 120   E -> E MINUS E
Rule 121   E -> E TIMES E
Rule 122   E -> E DIVIDE E
Rule 123   E -> E REST E
Rule 124   E -> ID
Rule 125   E -> TYPE_DATO
Rule 126   TYPE_DATO -> INT
Rule 127   TYPE_DATO -> FLOAT
Rule 128   TYPE_DATO -> STRING
Rule 129   TYPE_DATO -> CHAR
Rule 130   TYPE_DATO -> DATA_BOOL
Rule 131   empty -> <empty>

Terminals, with rules where they appear

AND                  : 79
BREAK                : 33 45 58
CHAR                 : 96 103 129
COLON                : 
COMENTLINE           : 31 43 56
COMENTMULTYLINE      : 32 44 57
COMMA                : 106 113
CONDITIONAL_ELSE     : 64 66 68
CONDITIONAL_IF       : 63 64 65 66 67 68
CONTINUE             : 34 46 59
DATA_BOOL            : 97 104 130
DIFFERENT            : 84
DIVIDE               : 122
DOT_AN_DCOMMA        : 33 34 35 45 46 47 48 58 59 72 74 76 93 94 95 96 97 100 101 102 103 104 105
FLOAT                : 94 101 127
GREATER              : 87
ID                   : 10 11 12 13 21 22 23 24 36 48 49 60 89 93 94 95 96 97 100 101 102 103 104 105 108 109 110 111 112 116 124
INT                  : 93 100 126
IQUAL                : 93 94 95 96 97 100 101 102 103 104 105
IQUALS               : 83
IQUAL_GREATER        : 85
IQUAL_LESS           : 86
ITERATIVE_DO         : 72 74 76
ITERATIVE_WHILE      : 71 72 73 74 75 76
LESS                 : 88
LKEY                 : 10 11 12 13 21 22 23 24 63 64 64 65 66 66 67 68 68 71 72 73 74 75 76
LPAREN               : 10 11 12 13 21 22 23 24 36 49 60 63 64 65 66 67 68 71 72 73 74 75 76
METHOD_RETURN        : 35 47 48
METHOD_VOID          : 10 11 12 13
MINUS                : 120
NOT                  : 81
OR                   : 80
PLUS                 : 119
REST                 : 123
RKEY                 : 10 11 12 13 21 22 23 24 63 64 64 65 66 66 67 68 68 71 72 73 74 75 76
RPAREN               : 10 11 12 13 21 22 23 24 36 49 60 63 64 65 66 67 68 71 72 73 74 75 76
STRING               : 95 102 128
TIMES                : 121
TYPE_BOOL            : 20 97 112
TYPE_CHAR            : 19 96 111
TYPE_DOUBLE          : 17 94 109
TYPE_INT             : 16 93 108
TYPE_STRING          : 18 95 110
error                : 

Nonterminals, with rules where they appear

ASSIGNMENT           : 98 99
ASSIGNMENTS          : 28 40 53 98
CALL                 : 113 114
CALLS                : 36 49 60 113
COUPLER              : 16 17 18 19 20
DECLARATION          : 91 92
DECLARATIONS         : 27 39 52 91
E                    : 117 118 119 119 120 120 121 121 122 122 123 123
EXPRESSIONS          : 90 105 117
FUNTION              : 14 15
FUNTIONS             : 6 14
INITIAL              : 0
INSTRUCTIONS         : 63 64 65 66 67 68 71 72 73 74 75 76 77
INTS                 : 2 3
L_INST               : 1 2
L_PARAMS             : 12 13 23 24 106
METHOD               : 8 9
METHODS              : 5 8
OPTION               : 82 83 83 84 84 85 85 86 86 87 87 88 88
OPTIONS              : 77 78 79 79 80 80 81 81
PARAM                : 106 107
SENTENCE             : 50 51
SENTENCES            : 7 50 63 64 64 71 72
SENTENCES_FUNTION    : 22 24 37 65 66 66 73 74
SENTENCES_IF         : 29 41 61
SENTENCES_METHOD     : 11 13 25 67 68 68 75 76
SENTENCES_WHILE      : 30 42 69
SENTENCE_FUNTION     : 37 38
SENTENCE_IF          : 54 61 62
SENTENCE_METHOD      : 25 26
SENTENCE_WHILE       : 55 69 70
TYPE_DATO            : 47 115 125
empty                : 4 10 12 21 23

Parsing method: LALR

state 0

    (0) S' -> . INITIAL
    (1) INITIAL -> . L_INST
    (2) L_INST -> . L_INST INTS
    (3) L_INST -> . INTS
    (4) L_INST -> . empty
    (5) INTS -> . METHODS
    (6) INTS -> . FUNTIONS
    (7) INTS -> . SENTENCES
    (131) empty -> .
    (8) METHODS -> . METHODS METHOD
    (9) METHODS -> . METHOD
    (14) FUNTIONS -> . FUNTIONS FUNTION
    (15) FUNTIONS -> . FUNTION
    (50) SENTENCES -> . SENTENCES SENTENCE
    (51) SENTENCES -> . SENTENCE
    (10) METHOD -> . METHOD_VOID ID LPAREN RPAREN LKEY empty RKEY
    (11) METHOD -> . METHOD_VOID ID LPAREN RPAREN LKEY SENTENCES_METHOD RKEY
    (12) METHOD -> . METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY empty RKEY
    (13) METHOD -> . METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY SENTENCES_METHOD RKEY
    (16) FUNTION -> . TYPE_INT COUPLER
    (17) FUNTION -> . TYPE_DOUBLE COUPLER
    (18) FUNTION -> . TYPE_STRING COUPLER
    (19) FUNTION -> . TYPE_CHAR COUPLER
    (20) FUNTION -> . TYPE_BOOL COUPLER
    (52) SENTENCE -> . DECLARATIONS
    (53) SENTENCE -> . ASSIGNMENTS
    (54) SENTENCE -> . SENTENCE_IF
    (55) SENTENCE -> . SENTENCE_WHILE
    (56) SENTENCE -> . COMENTLINE
    (57) SENTENCE -> . COMENTMULTYLINE
    (58) SENTENCE -> . BREAK DOT_AN_DCOMMA
    (59) SENTENCE -> . CONTINUE DOT_AN_DCOMMA
    (60) SENTENCE -> . ID LPAREN CALLS RPAREN
    (91) DECLARATIONS -> . DECLARATIONS DECLARATION
    (92) DECLARATIONS -> . DECLARATION
    (98) ASSIGNMENTS -> . ASSIGNMENTS ASSIGNMENT
    (99) ASSIGNMENTS -> . ASSIGNMENT
    (63) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY
    (64) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY CONDITIONAL_ELSE LKEY SENTENCES RKEY
    (65) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY
    (66) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY CONDITIONAL_ELSE LKEY SENTENCES_FUNTION RKEY
    (67) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY
    (68) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY CONDITIONAL_ELSE LKEY SENTENCES_METHOD RKEY
    (71) SENTENCE_WHILE -> . ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY
    (72) SENTENCE_WHILE -> . ITERATIVE_DO LKEY SENTENCES RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
    (73) SENTENCE_WHILE -> . ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY
    (74) SENTENCE_WHILE -> . ITERATIVE_DO LKEY SENTENCES_FUNTION RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
    (75) SENTENCE_WHILE -> . ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY
    (76) SENTENCE_WHILE -> . ITERATIVE_DO LKEY SENTENCES_METHOD RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
    (93) DECLARATION -> . TYPE_INT ID IQUAL INT DOT_AN_DCOMMA
    (94) DECLARATION -> . TYPE_DOUBLE ID IQUAL FLOAT DOT_AN_DCOMMA
    (95) DECLARATION -> . TYPE_STRING ID IQUAL STRING DOT_AN_DCOMMA
    (96) DECLARATION -> . TYPE_CHAR ID IQUAL CHAR DOT_AN_DCOMMA
    (97) DECLARATION -> . TYPE_BOOL ID IQUAL DATA_BOOL DOT_AN_DCOMMA
    (100) ASSIGNMENT -> . ID IQUAL INT DOT_AN_DCOMMA
    (101) ASSIGNMENT -> . ID IQUAL FLOAT DOT_AN_DCOMMA
    (102) ASSIGNMENT -> . ID IQUAL STRING DOT_AN_DCOMMA
    (103) ASSIGNMENT -> . ID IQUAL CHAR DOT_AN_DCOMMA
    (104) ASSIGNMENT -> . ID IQUAL DATA_BOOL DOT_AN_DCOMMA
    (105) ASSIGNMENT -> . ID IQUAL EXPRESSIONS DOT_AN_DCOMMA

  ! shift/reduce conflict for METHOD_VOID resolved as shift
  ! shift/reduce conflict for TYPE_INT resolved as shift
  ! shift/reduce conflict for TYPE_DOUBLE resolved as shift
  ! shift/reduce conflict for TYPE_STRING resolved as shift
  ! shift/reduce conflict for TYPE_CHAR resolved as shift
  ! shift/reduce conflict for TYPE_BOOL resolved as shift
  ! shift/reduce conflict for COMENTLINE resolved as shift
  ! shift/reduce conflict for COMENTMULTYLINE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for CONDITIONAL_IF resolved as shift
  ! shift/reduce conflict for ITERATIVE_WHILE resolved as shift
  ! shift/reduce conflict for ITERATIVE_DO resolved as shift
    $end            reduce using rule 131 (empty -> .)
    METHOD_VOID     shift and go to state 11
    TYPE_INT        shift and go to state 13
    TYPE_DOUBLE     shift and go to state 14
    TYPE_STRING     shift and go to state 15
    TYPE_CHAR       shift and go to state 16
    TYPE_BOOL       shift and go to state 17
    COMENTLINE      shift and go to state 22
    COMENTMULTYLINE shift and go to state 23
    BREAK           shift and go to state 24
    CONTINUE        shift and go to state 25
    ID              shift and go to state 12
    CONDITIONAL_IF  shift and go to state 28
    ITERATIVE_WHILE shift and go to state 29
    ITERATIVE_DO    shift and go to state 30

  ! METHOD_VOID     [ reduce using rule 131 (empty -> .) ]
  ! TYPE_INT        [ reduce using rule 131 (empty -> .) ]
  ! TYPE_DOUBLE     [ reduce using rule 131 (empty -> .) ]
  ! TYPE_STRING     [ reduce using rule 131 (empty -> .) ]
  ! TYPE_CHAR       [ reduce using rule 131 (empty -> .) ]
  ! TYPE_BOOL       [ reduce using rule 131 (empty -> .) ]
  ! COMENTLINE      [ reduce using rule 131 (empty -> .) ]
  ! COMENTMULTYLINE [ reduce using rule 131 (empty -> .) ]
  ! BREAK           [ reduce using rule 131 (empty -> .) ]
  ! CONTINUE        [ reduce using rule 131 (empty -> .) ]
  ! ID              [ reduce using rule 131 (empty -> .) ]
  ! CONDITIONAL_IF  [ reduce using rule 131 (empty -> .) ]
  ! ITERATIVE_WHILE [ reduce using rule 131 (empty -> .) ]
  ! ITERATIVE_DO    [ reduce using rule 131 (empty -> .) ]

    INITIAL                        shift and go to state 1
    L_INST                         shift and go to state 2
    INTS                           shift and go to state 3
    empty                          shift and go to state 4
    METHODS                        shift and go to state 5
    FUNTIONS                       shift and go to state 6
    SENTENCES                      shift and go to state 7
    METHOD                         shift and go to state 8
    FUNTION                        shift and go to state 9
    SENTENCE                       shift and go to state 10
    DECLARATIONS                   shift and go to state 18
    ASSIGNMENTS                    shift and go to state 19
    SENTENCE_IF                    shift and go to state 20
    SENTENCE_WHILE                 shift and go to state 21
    DECLARATION                    shift and go to state 26
    ASSIGNMENT                     shift and go to state 27

state 1

    (0) S' -> INITIAL .



state 2

    (1) INITIAL -> L_INST .
    (2) L_INST -> L_INST . INTS
    (5) INTS -> . METHODS
    (6) INTS -> . FUNTIONS
    (7) INTS -> . SENTENCES
    (8) METHODS -> . METHODS METHOD
    (9) METHODS -> . METHOD
    (14) FUNTIONS -> . FUNTIONS FUNTION
    (15) FUNTIONS -> . FUNTION
    (50) SENTENCES -> . SENTENCES SENTENCE
    (51) SENTENCES -> . SENTENCE
    (10) METHOD -> . METHOD_VOID ID LPAREN RPAREN LKEY empty RKEY
    (11) METHOD -> . METHOD_VOID ID LPAREN RPAREN LKEY SENTENCES_METHOD RKEY
    (12) METHOD -> . METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY empty RKEY
    (13) METHOD -> . METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY SENTENCES_METHOD RKEY
    (16) FUNTION -> . TYPE_INT COUPLER
    (17) FUNTION -> . TYPE_DOUBLE COUPLER
    (18) FUNTION -> . TYPE_STRING COUPLER
    (19) FUNTION -> . TYPE_CHAR COUPLER
    (20) FUNTION -> . TYPE_BOOL COUPLER
    (52) SENTENCE -> . DECLARATIONS
    (53) SENTENCE -> . ASSIGNMENTS
    (54) SENTENCE -> . SENTENCE_IF
    (55) SENTENCE -> . SENTENCE_WHILE
    (56) SENTENCE -> . COMENTLINE
    (57) SENTENCE -> . COMENTMULTYLINE
    (58) SENTENCE -> . BREAK DOT_AN_DCOMMA
    (59) SENTENCE -> . CONTINUE DOT_AN_DCOMMA
    (60) SENTENCE -> . ID LPAREN CALLS RPAREN
    (91) DECLARATIONS -> . DECLARATIONS DECLARATION
    (92) DECLARATIONS -> . DECLARATION
    (98) ASSIGNMENTS -> . ASSIGNMENTS ASSIGNMENT
    (99) ASSIGNMENTS -> . ASSIGNMENT
    (63) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY
    (64) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY CONDITIONAL_ELSE LKEY SENTENCES RKEY
    (65) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY
    (66) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY CONDITIONAL_ELSE LKEY SENTENCES_FUNTION RKEY
    (67) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY
    (68) SENTENCE_IF -> . CONDITIONAL_IF LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY CONDITIONAL_ELSE LKEY SENTENCES_METHOD RKEY
    (71) SENTENCE_WHILE -> . ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES RKEY
    (72) SENTENCE_WHILE -> . ITERATIVE_DO LKEY SENTENCES RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
    (73) SENTENCE_WHILE -> . ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_FUNTION RKEY
    (74) SENTENCE_WHILE -> . ITERATIVE_DO LKEY SENTENCES_FUNTION RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
    (75) SENTENCE_WHILE -> . ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN LKEY SENTENCES_METHOD RKEY
    (76) SENTENCE_WHILE -> . ITERATIVE_DO LKEY SENTENCES_METHOD RKEY ITERATIVE_WHILE LPAREN INSTRUCTIONS RPAREN DOT_AN_DCOMMA
    (93) DECLARATION -> . TYPE_INT ID IQUAL INT DOT_AN_DCOMMA
    (94) DECLARATION -> . TYPE_DOUBLE ID IQUAL FLOAT DOT_AN_DCOMMA
    (95) DECLARATION -> . TYPE_STRING ID IQUAL STRING DOT_AN_DCOMMA
    (96) DECLARATION -> . TYPE_CHAR ID IQUAL CHAR DOT_AN_DCOMMA
    (97) DECLARATION -> . TYPE_BOOL ID IQUAL DATA_BOOL DOT_AN_DCOMMA
    (100) ASSIGNMENT -> . ID IQUAL INT DOT_AN_DCOMMA
    (101) ASSIGNMENT -> . ID IQUAL FLOAT DOT_AN_DCOMMA
    (102) ASSIGNMENT -> . ID IQUAL STRING DOT_AN_DCOMMA
    (103) ASSIGNMENT -> . ID IQUAL CHAR DOT_AN_DCOMMA
    (104) ASSIGNMENT -> . ID IQUAL DATA_BOOL DOT_AN_DCOMMA
    (105) ASSIGNMENT -> . ID IQUAL EXPRESSIONS DOT_AN_DCOMMA

    $end            reduce using rule 1 (INITIAL -> L_INST .)
    METHOD_VOID     shift and go to state 11
    TYPE_INT        shift and go to state 13
    TYPE_DOUBLE     shift and go to state 14
    TYPE_STRING     shift and go to state 15
    TYPE_CHAR       shift and go to state 16
    TYPE_BOOL       shift and go to state 17
    COMENTLINE      shift and go to state 22
    COMENTMULTYLINE shift and go to state 23
    BREAK           shift and go to state 24
    CONTINUE        shift and go to state 25
    ID              shift and go to state 12
    CONDITIONAL_IF  shift and go to state 28
    ITERATIVE_WHILE shift and go to state 29
    ITERATIVE_DO    shift and go to state 30

    INTS                           shift and go to state 31
    METHODS                        shift and go to state 5
    FUNTIONS                       shift and go to state 6
    SENTENCES                      shift and go to state 7
    METHOD                         shift and go to state 8
    FUNTION                        shift and go to state 9
    SENTENCE                       shift and go to state 10
    DECLARATIONS                   shift and go to state 18
    ASSIGNMENTS                    shift and go to state 19
    SENTENCE_IF                    shift and go to state 20
    SENTENCE_WHILE                 shift and go to state 21
    DECLARATION                    shift and go to state 26
    ASSIGNMENT                     shift and go to state 27

state 3

    (3) L_INST -> INTS .

    METHOD_VOID     reduce using rule 3 (L_INST -> INTS .)
    TYPE_INT        reduce using rule 3 (L_INST -> INTS .)
    TYPE_DOUBLE     reduce using rule 3 (L_INST -> INTS .)
    TYPE_STRING     reduce using rule 3 (L_INST -> INTS .)
    TYPE_CHAR       reduce using rule 3 (L_INST -> INTS .)
    TYPE_BOOL       reduce using rule 3 (L_INST -> INTS .)
    COMENTLINE      reduce using rule 3 (L_INST -> INTS .)
    COMENTMULTYLINE reduce using rule 3 (L_INST -> INTS .)
    BREAK           reduce using rule 3 (L_INST -> INTS .)
    CONTINUE        reduce using rule 3 (L_INST -> INTS .)
    ID              reduce using rule 3 (L_INST -> INTS .)
    CONDITIONAL_IF  reduce using rule 3 (L_INST -> INTS .)
    ITERATIVE_WHILE reduce using rule 3 (L_INST -> INTS .)
    ITERATIVE_DO    reduce using rule 3 (L_INST -> INTS .)
    $end            reduce using rule 3 (L_INST -> INTS .)


state 4

    (4) L_INST -> empty .

    METHOD_VOID     reduce using rule 4 (L_INST -> empty .)
    TYPE_INT        reduce using rule 4 (L_INST -> empty .)
    TYPE_DOUBLE     reduce using rule 4 (L_INST -> empty .)
    TYPE_STRING     reduce using rule 4 (L_INST -> empty .)
    TYPE_CHAR       reduce using rule 4 (L_INST -> empty .)
    TYPE_BOOL       reduce using rule 4 (L_INST -> empty .)
    COMENTLINE      reduce using rule 4 (L_INST -> empty .)
    COMENTMULTYLINE reduce using rule 4 (L_INST -> empty .)
    BREAK           reduce using rule 4 (L_INST -> empty .)
    CONTINUE        reduce using rule 4 (L_INST -> empty .)
    ID              reduce using rule 4 (L_INST -> empty .)
    CONDITIONAL_IF  reduce using rule 4 (L_INST -> empty .)
    ITERATIVE_WHILE reduce using rule 4 (L_INST -> empty .)
    ITERATIVE_DO    reduce using rule 4 (L_INST -> empty .)
    $end            reduce using rule 4 (L_INST -> empty .)


state 5

    (5) INTS -> METHODS .
    (8) METHODS -> METHODS . METHOD
    (10) METHOD -> . METHOD_VOID ID LPAREN RPAREN LKEY empty RKEY
    (11) METHOD -> . METHOD_VOID ID LPAREN RPAREN LKEY SENTENCES_METHOD RKEY
    (12) METHOD -> . METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY empty RKEY
    (13) METHOD -> . METHOD_VOID ID LPAREN L_PARAMS RPAREN LKEY SENTENCES_METHOD RKEY

  ! shift/reduce conflict for METHOD_VOID resolved as shift
    TYPE_INT        reduce using rule 5 (INTS -> METHODS .)
    TYPE_DOUBLE     reduce using rule 5 (INTS -> METHODS .)
    TYPE_STRING     reduce using rule 5 (INTS -> METHODS .)
    TYPE_CHAR       reduce using rule 5 (INTS -> METHODS .)
    TYPE_BOOL       reduce using rule 5 (INTS -> METHODS .)
    COMENTLINE      reduce using rule 5 (INTS -> METHODS .)
    COMENTMULTYLINE reduce using rule 5 (INTS -> METHODS .)
    BREAK           reduce using rule 5 (INTS -> METHODS .)
    CONTINUE        reduce using rule 5 (INTS -> METHODS .)
    ID              reduce using rule 5 (INTS -> METHODS .)
    CONDITIONAL_IF  reduce using rule 5 (INTS -> METHODS .)
    ITERATIVE_WHILE reduce using rule 5 (INTS -> METHODS .)
    ITERATIVE_DO    reduce using rule 5 (INTS -> METHODS .)
    $end            reduce using rule 5 (INTS -> METHODS .)
    METHOD_VOID     shift and go to state 11

  ! METHOD_VOID     [ reduce using rule 5 (INTS -> METHODS .) ]

    METHOD                         shift and go to state 32

state 6

    (6) INTS -> FUNTIONS .
    (14) FUNTIONS -> FUNTIONS . FUNTION
    (16) FUNTION -> . TYPE_INT COUPLER
    (17) FUNTION -> . TYPE_DOUBLE COUPLER
    (18) FUNTION -> . TYPE_STRING COUPLER
    (19) FUNTION -> . TYPE_CHAR COUPLER
    (20) FUNTION -> . TYPE_BOOL COUPLER
